# pylib_007

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: data.csv
src/pylib_007/: __init__.py  core.py  viz.py
tests/: test_pylib_007.py
